Removing TBDs from Controller docs (#1867)
* Removing TBDs from Controller docs

Remove TBDs from Controller documentation

https://issues.redhat.com/browse/AAP-30985

* Removing TBDs from Controller docs

Added link

Remove TBDs from Controller documentation

https://issues.redhat.com/browse/AAP-30985

* Removing TBDs from Controller docs

Added Analytics back to Configuring AE

Remove TBDs from Controller documentation

https://issues.redhat.com/browse/AAP-30985

* Adding changes to Ian's PR-1867 in his absence

---------

Co-authored-by: Donna DaCosta <ddacosta@redhat.com>

--- a/downstream/modules/platform/ref-controller-analytics-reports.adoc
+++ b/downstream/modules/platform/ref-controller-analytics-reports.adoc
@@ -1,25 +1,34 @@
 [id="ref-controller-analytics-reports"]
 
 = Analytics Reports
+//[ddacosta - removed to reflect current environment but this might be updated in the product later and this statement could be added back.]
+//Reports from collection are accessible through the {ControllerName} UI if you have superuser-level permissions.
+//By including the analytics view on-prem where it is most convenient, you can access data that can affect your day-to-day work.
+//This data is aggregated from the automation provided on link:https://console.redhat.com[{Console}].
 
-Reports from collection are accessible through the {ControllerName} UI if you have superuser-level permissions.
-By including the analytics view on-prem where it is most convenient, you can access data that can affect your day-to-day work.
-This data is aggregated from the automation provided on link:https://console.redhat.com[{Console}].
+Reports for data collected are available through link:https://console.redhat.com[{Console}].
 
-Currently available is a view-only version of the Automation Calculator utility that shows a report that represents (possible) savings to the subscriber.
+Other {Analytics} data currently available and accessible through the platform UI include the following:
+
+*Automation Calculator* is a view-only version of the Automation Calculator utility that shows a report that represents (possible) savings to the subscriber.
 
 image:aa-automation-calculator.png[Automation calculator]
 
-[NOTE]
-====
-This option is available for technical preview and is subject to change in a future release.
-To preview the analytic reports view, set the *Enable Preview of New User Interface* toggle to *On* from the *Miscellaneous System Settings* option of the {MenuAEAdminSettings} menu.
+*Host Metrics* is an analytics report collected for host data such as, when they were first automated, when they were most recently automated, how many times they were automated, and how many times each host has been deleted.
 
-After saving, logout and log back in to access the options under the *Analytics* section on the navigation panel.
+*Subscription Usage* reports the historical usage of your subscription. Subscription capacity and licenses consumed per month are displayed, with the ability to filter by the last year, two years, or three years.
 
-image:aa-options-navbar.png[Navigation panel]
-====
+//I don't think this is included
+//[NOTE]
+//====
+//This option is available for technical preview and is subject to change in a future release.
+//To preview the analytic reports view, set the *Enable Preview of New User Interface* toggle to *On* from the *Miscellaneous System Settings* option of the {MenuAEAdminSettings} menu.
 
-Host Metrics is another analytics report collected for host data.
-The ability to access this option from this part of the UI is currently in tech preview and is subject to change in a future release.
-For more information, see the _Host Metrics view_ in xref:controller-config[{ControllerNameStart} configuration].
+//After saving, logout and log back in to access the options under the *Analytics* section on the navigation panel.
+
+//image:aa-options-navbar.png[Navigation panel]
+//====
+
+//Host Metrics is another analytics report collected for host data.
+//The ability to access this option from this part of the UI is currently in tech preview and is subject to change in a future release.
+//For more information, see the _Host Metrics view_ in xref:controller-config[{ControllerNameStart} configuration].
