--- a/downstream/modules/platform/proc-controller-importing-subscriptions.adoc
+++ b/downstream/modules/platform/proc-controller-importing-subscriptions.adoc
@@ -3,6 +3,18 @@
 = Importing a subscription
 
 After you have obtained an authorized {PlatformNameShort} subscription, you must import it into the {ControllerName} system before you can use {ControllerName}.
+
+[NOTE]
+====
+You are opted in for {Analytics} by default when you activate the {ControllerName} on first time log in. This helps Red Hat improve the product by delivering you a much better user experience. You can opt out, by doing the following: 
+. From the navigation panel, select menu:Settings[] and select the *Miscellaneous System settings* option.
+. Click btn:[Edit].
+. Toggle the *Gather data for Automation Analytics* switch to the off position.
+. Click btn:[Save].
+For opt-in of {Analytics} to be effective, your instance of {ControllerName} must be running on {RHEL}. 
+For more information, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_administration_guide/index#ref-controller-automation-analytics[{Analytics}] section.
+====
+
 .Prerequisites
 
 * You have obtained a subscriptions manifest. 
@@ -34,25 +46,26 @@ After you enter your credentials, click btn:[Get Subscriptions].
 Then, it prompts you to select the subscription that you want to run and applies that metadata to {ControllerName}. 
 You can log in over time and retrieve new subscriptions if you have renewed.
 +
-. Click btn:[Next] to proceed to the *Tracking and Insights* page. 
-+
-Tracking and insights collect data to help Red Hat improve the product and deliver a better user experience. 
+. Click btn:[Next] to proceed to the End User Agreement.
+//[ddacosta - removed analytics selection for AAP-30863 and AAP-29909] to proceed to the *Tracking and Insights* page. 
+//+
+//Tracking and insights collect data to help Red Hat improve the product and deliver a better user experience. 
 //For more information about data collection, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_administration_guide/index#controller-usability-analytics-data-collection[Usability Analytics and Data Collection] of the _{ControllerAG}_.
-+ 
-This option is checked by default, but you can opt out of any of the following:
+//+ 
+//This option is checked by default, but you can opt out of any of the following:
 
 //* *User analytics*. Collects data from the controller UI.
-* *Insights Analytics*. Provides a high level analysis of your automation with {ControllerName}. 
-It helps you to identify trends and anomalous use of the controller. 
-For opt-in of {Analytics} to be effective, your instance of {ControllerName} must be running on {RHEL}. 
-For more information, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_administration_guide/index#ref-controller-automation-analytics[{Analytics}] section. TBD
-+
-[NOTE]
-====
-You can change your analytics data collection preferences at any time.
-====
-+
-. After you have specified your tracking and Insights preferences, click btn:[Next] to proceed to the End User Agreement.
+//* *Insights Analytics*. Provides a high level analysis of your automation with {ControllerName}. 
+//It helps you to identify trends and anomalous use of the controller. 
+//For opt-in of {Analytics} to be effective, your instance of {ControllerName} must be running on {RHEL}. 
+//For more information, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/configuring_automation_execution/index#ref-controller-automation-analytics[{Analytics}] section of _{ControllerAG}_.
+//+
+//[NOTE]
+//====
+//You can change your analytics data collection preferences at any time.
+//====
+//+
+//. After you have specified your tracking and Insights preferences, click btn:[Next] 
 . Review and check the *I agree to the End User License Agreement* checkbox and click btn:[Submit].
 +
 After your subscription is accepted, {ControllerName} displays the subscription details and opens the Dashboard. 
