AAP_30807:Edit 2.4 links

--- a/downstream/modules/platform/con-ha-hub-installation.adoc
+++ b/downstream/modules/platform/con-ha-hub-installation.adoc
@@ -26,9 +26,9 @@ automationhub_pg_port=5432
 * If installing a clustered setup, replace `localhost ansible_connection=local` in the [automationhub] section with the hostname or IP of all instances. For example:
 -----
 [automationhub]
-automationhub1.testing.ansible.com ansible_user=cloud-user ansible_host=192.0.2.18
-automationhub2.testing.ansible.com ansible_user=cloud-user ansible_host=192.0.2.20
-automationhub3.testing.ansible.com ansible_user=cloud-user ansible_host=192.0.2.22
+automationhub1.testing.ansible.com ansible_user=cloud-user
+automationhub2.testing.ansible.com ansible_user=cloud-user
+automationhub3.testing.ansible.com ansible_user=cloud-user
 -----
 
 [role="_additional-resources"]
