--- a/downstream/modules/platform/proc-set-registry-username-password.adoc
+++ b/downstream/modules/platform/proc-set-registry-username-password.adoc
@@ -9,14 +9,15 @@ Registry service accounts provide named tokens that can be used in environments 
 .Procedure
 . Navigate to https://access.redhat.com/terms-based-registry/accounts
 . On the *Registry Service Accounts* page click btn:[New Service Account].
-. Enter a name for the account using only the accepted characters
+. Enter a name for the account using only the accepted characters.
 . Optionally enter a description for the account.
 . Click btn:[Create account].
 . Find the created account in the list. 
 The list of accounts is long so you might have to click btn:[Next] multiple times before finding the account you created. 
 Alternatively, if you know the name of your token, you can go directly to the page by entering the URL \https://access.redhat.com/terms-based-registry/token/<name-of-your-token>
 . Click the name of the account that you created. 
-. A token page opens, displaying a generated Username (different to the account name) and a token. 
+. A *token* page opens, displaying a generated Username (different to the account name) and a token. 
++
 If no Username and token are displayed, click btn:[Regenerate token]. You can also click this to generate a new Username and token.
 . Copy the service account name and use it to set `registry_username`.
 . Copy the token and use it to set `registry_password`.
