--- a/downstream/modules/platform/proc-verify-aap-installation.adoc
+++ b/downstream/modules/platform/proc-verify-aap-installation.adoc
@@ -3,19 +3,12 @@
 = Verifying installation of {PlatformNameShort}
 
 [role="_abstract"]
-Verify that you installed {PlatformNameShort} successfully by logging in with the admin credentials you inserted in the inventory file.
-
-.Procedure
-. Go to the IP address specified for the platform gateway node in the inventory file.
-. Log in with the user ID `admin` and the password credentials you set in the inventory file.
-. Depending on the components you configured as part of your installation, you will see the following in the platform UI:
-.. For {ControllerName}, you will see *Automation Execution*.
-.. For {EDAName}, you will see *Automation Decisions*.
-.. For {HubName}, you will see *Automation Content*.
+Upon a successful login, your installation of {PlatformName} is complete.
 
 [IMPORTANT]
 ====
-If the installation fails and you are a customer who has purchased a valid license for {PlatformName}, contact Ansible through the link:https://access.redhat.com/[Red Hat Customer portal].
+If the installation fails and you are a customer who has purchased a valid license for {PlatformName}, contact Ansible through the link:https://docs.redhat.com/[Red Hat Customer portal].
 ====
 
-Upon a successful login, your installation of {PlatformName} is complete.
+.Additional resources
+See Link:{LinkGettingStarted} for post installation instructions.
