--- a/downstream/modules/platform/ref-gateway-controller-hub-eda-ext-db.adoc
+++ b/downstream/modules/platform/ref-gateway-controller-hub-eda-ext-db.adoc
@@ -128,3 +128,5 @@ automationgateway_pg_sslmode='prefer'
 # automationedacontroller_ssl_key=/path/to/automationeda.key
 
 -----
+.Additional resources
+For more information about these inventory variables, refer to the link:{URLInstallationGuide}/index#ref-hub-variables[{HubNameMain} variables]. 
