--- a/downstream/assemblies/platform/assembly-platform-install-scenario.adoc
+++ b/downstream/assemblies/platform/assembly-platform-install-scenario.adoc
@@ -10,7 +10,9 @@ ifdef::context[:parent-context: {context}]
 :context: platform-install-scenario
 
 [role="_abstract"]
-{PlatformNameShort} is a modular platform. You can deploy {ControllerName} with other components such as {HubName}, {EDAcontroller} and platform gateway. For more information about the components provided with {PlatformNameShort}, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_planning_guide/planning-installation#ref-platform-components[{PlatformName} components] in the {PlatformName} Planning Guide.
+{PlatformNameShort} is a modular platform. The platform gateway deploys automation platform components, such as {ControllerName}, {HubName}, and {EDAcontroller}. 
+
+For more information about the components provided with {PlatformNameShort}, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_planning_guide/planning-installation#ref-platform-components[{PlatformName} components] in link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/planning_your_installation[{TitlePlanningGuide}]. 
 
 There are several supported installation scenarios for {PlatformName}. To install {PlatformName}, you must edit the inventory file parameters to specify your installation scenario. You can use one of the following as a basis for your own inventory file:
 
@@ -18,6 +20,9 @@ There are several supported installation scenarios for {PlatformName}. To instal
 * xref:ref-gateway-controller-ext-db[Single platform gateway and {ControllerName} with an external (installer managed) database]
 * xref:ref-gateway-controller-hub-ext-db[Single platform gateway, {ControllerName}, and {HubName} with an external (installer managed) database]
 * xref:ref-gateway-controller-hub-eda-ext-db[Single platform gateway, {ControllerName}, {HubName}, and {EDAcontroller} node with an external (installer managed) database]
+
+.Additional resources
+For a comprehensive list of pre-defined variables used in Ansible installation inventory files, see link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html-single/red_hat_ansible_automation_platform_installation_guide/index#ref-ansible-inventory-variables[A.6. Ansible variables].
 
 // Removed for install scenario consolidation AAP-17771
 // * xref:ref-single-controller-ext-installer-managed-db[Single {ControllerName} with external (installer managed) database]
@@ -71,6 +76,7 @@ include::hub/hub/proc-configure-content-signing-on-pah.adoc[leveloffset=+3]
 
 include::platform/proc-running-setup-script.adoc[leveloffset=+1]
 include::platform/proc-verify-aap-installation.adoc[leveloffset=+1]
+include::platform/con-adding-subscription-manifest.adoc[leveloffset=+1]
 
 // Removing to consolidate AAP installation verification - you verify by logging into the gateway rather than logging into each component's UI - AAP-17771  
 // include::platform/proc-verify-controller-installation.adoc[leveloffset=+1]
