--- a/downstream/modules/platform/proc-running-setup-script.adoc
+++ b/downstream/modules/platform/proc-running-setup-script.adoc
@@ -5,11 +5,6 @@
 [role="_abstract"]
 After you update the inventory file with required parameters, run the installer setup script.
 
-[IMPORTANT]
-====
-You must have installed ansible-core {CoreUseVers} before using the installer setup script.
-====
-
 .Procedure
 
 * Run the `setup.sh` script
@@ -18,7 +13,19 @@ You must have installed ansible-core {CoreUseVers} before using the installer se
 $ sudo ./setup.sh
 -----
 
+[NOTE]
+====
+If you are running the setup as a non-root user with `sudo` privileges, you can use the following command:
+----
+$ ANSIBLE_BECOME_METHOD='sudo'
+ANSIBLE_BECOME=True ./setup.sh
+----
+====
+
 Installation of {PlatformName} will begin.
+
+.Additional resources
+See link:https://docs.ansible.com/ansible/latest/playbook_guide/playbooks_privilege_escalation.html[Understanding privilege escalation] for additional `setup.sh` script examples.
 
 ifdef::mesh-VM[]
 If you want to add additional nodes to your {AutomationMesh} after the initial setup, edit the inventory file to add the new node, then rerun the `setup.sh` script.
