--- a/downstream/assemblies/devtools/assembly-devtools-install.adoc
+++ b/downstream/assemblies/devtools/assembly-devtools-install.adoc
@@ -1,4 +1,4 @@
-ifdef::context[:parent-context: {context}]
+ifdef::context[:parent-context-of-assembly-devtools-install: {context}]
 [id="installing-devtools"]
 
 = Installing {ToolsName}
@@ -6,15 +6,14 @@ ifdef::context[:parent-context: {context}]
 :context: installing-devtools
 [role="_abstract"]
 Red Hat provides two options for installing {ToolsName}.
-Both options require {VSCode} (Visual Studio Code) with the Ansible extension added. 
+// Both options require {VSCode} (Visual Studio Code) with the Ansible extension added. 
 
 * Installation on a RHEL container running inside {VSCode}.
 You can install this option on MacOS, Windows, and Linux systems.
 * Installation on your local RHEL system using an RPM (Red Hat Package Manager) package.
 
-== Requirements
-
-Ansible developer tools require Python 3.10 or later.
+include::devtools/con-devtools-requirements.adoc[leveloffset=+1]
+include::devtools/proc-devtools-setup-registry-redhat-io.adoc[leveloffset=+2]
 
 include::devtools/proc-devtools-install-vsc.adoc[leveloffset=+1]
 include::devtools/proc-devtools-install-vscode-extension.adoc[leveloffset=+1]
@@ -22,6 +21,6 @@ include::devtools/proc-devtools-extension-settings.adoc[leveloffset=+1]
 include::devtools/proc-devtools-install-container.adoc[leveloffset=+1]
 include::devtools/proc-devtools-install-rpm.adoc[leveloffset=+1]
 
-ifdef::parent-context[:context: {parent-context}]
-ifndef::parent-context[:!context:]
+ifdef::parent-context-of-assembly-devtools-install[:context: {parent-context-of-assembly-devtools-install}]
+ifndef::parent-context-of-assembly-devtools-install[:!context:]
 
