--- a/downstream/assemblies/hub/assembly-managing-cert-valid-content.adoc
+++ b/downstream/assemblies/hub/assembly-managing-cert-valid-content.adoc
@@ -16,54 +16,51 @@ Red Hat Ansible content contains two types of content:
 You can use both {CertifiedName} or {Valid} collections to build your automation library. For more information on the differences between {CertifiedName} and {Valid} collections, see the Knowledgebase article link:https://access.redhat.com/support/articles/ansible-automation-platform-certified-content[{CertifiedName} and {Valid}], or xref:assembly-validated-content[{Valid}] in this guide.
 
 // hherbly--removed, see aap-20548  
-////
-Ansible validated collections are available in your {PrivateHubName} through the platform installer.
-When you download {PlatformName} with the bundled installer, validated content is pre-populated into the {PrivateHubName} by default, but only if you enable the {PrivateHubName} as part of the inventory.
+// Ansible validated collections are available in your {PrivateHubName} through the platform installer.
+// When you download {PlatformName} with the bundled installer, validated content is pre-populated into the {PrivateHubName} by default, but only if you enable the {PrivateHubName} as part of the inventory.
 
-If you are not using the bundle installer, you can use a Red Hat supplied Ansible playbook to install validated content.
+// If you are not using the bundle installer, you can use a Red Hat supplied Ansible playbook to install validated content.
 
-For further information, see xref:assembly-validated-content[{Valid}].
-////
+// For further information, see xref:assembly-validated-content[{Valid}].
 
 You can update these collections manually by downloading their packages.
 
 //hherbly: removing as this is specific to partners, not a general user audience. see aap-20548  
 
 [discrete]
-////
-== Why certify Ansible collections?
 
-The Ansible certification program represents a shared statement of support for {CertifiedCon} between Red Hat and the ecosystem partner.
-An end customer experiencing trouble with Ansible and certified partner content can, for example, open a support ticket describing a request for information, or a problem with Red Hat, and expect the ticket to be resolved by Red Hat and the ecosystem partner.
+// == Why certify Ansible collections?
 
-Red Hat offers go-to-market benefits for Certified Partners to grow market awareness, generate demand, and sell collaboratively.
+// The Ansible certification program represents a shared statement of support for {CertifiedCon} between Red Hat and the ecosystem partner.
+// An end customer experiencing trouble with Ansible and certified partner content can, for example, open a support ticket describing a request for information, or a problem with Red Hat, and expect the ticket to be resolved by Red Hat and the ecosystem partner.
 
-Red Hat {CertifiedName} are distributed through {HubNameMain} (subscription required), a centralized repository for jointly supported Ansible Content.
-As a certified partner, publishing collections to {HubNameMain} gives end customers the power to manage how trusted automation content is used in their production environment with a well-known support life cycle.
+// Red Hat offers go-to-market benefits for Certified Partners to grow market awareness, generate demand, and sell collaboratively.
 
-For more information about getting started with certifying a solution, see link:https://connect.redhat.com/en/partner-with-us/red-hat-ansible-automation-certification[Red Hat Partner Resources].
+// Red Hat {CertifiedName} are distributed through {HubNameMain} (subscription required), a centralized repository for jointly supported Ansible Content.
+// As a certified partner, publishing collections to {HubNameMain} gives end customers the power to manage how trusted automation content is used in their production environment with a well-known support life cycle.
 
-[discrete]
-== How do I get a collection certified?
+// For more information about getting started with certifying a solution, see link:https://connect.redhat.com/en/partner-with-us/red-hat-ansible-automation-certification[Red Hat Partner Resources].
 
-For instructions on certifying your collection, see the Ansible certification policy guide on link:http://www.ansible.com/partners[Red Hat Partner Connect].
+// [discrete]
+// == How do I get a collection certified?
 
-[discrete]
-== How does the joint support agreement on Certified Collections work?
+// For instructions on certifying your collection, see the Ansible certification policy guide on link:http://www.ansible.com/partners[Red Hat Partner Connect].
 
-If a customer raises an issue with the Red Hat support team about a certified collection, Red Hat support assesses the issue and checks whether the problem is with Ansible or Ansible usage.
-They also check whether the issue is with a certified collection.
-If there is a problem with the certified collection, support teams transfer the issue to the vendor owner of the certified collection through an agreed-upon tool such as TSANet.
+// [discrete]
+// == How does the joint support agreement on Certified Collections work?
 
-[discrete]
-== Can I create and certify a collection containing only Ansible Roles?
+// If a customer raises an issue with the Red Hat support team about a certified collection, Red Hat support assesses the issue and checks whether the problem is with Ansible or Ansible usage.
+// They also check whether the issue is with a certified collection.
+// If there is a problem with the certified collection, support teams transfer the issue to the vendor owner of the certified collection through an agreed-upon tool such as TSANet.
 
-You can create and certify collections that contain only roles.
-Current testing requirements are focused on collections containing modules, and additional resources are currently in progress for testing collections containing only roles.
-Contact ansiblepartners@redhat.com for more information.
-////
+// [discrete]
+// == Can I create and certify a collection containing only Ansible Roles?
 
-You can use {HubNameMain} to distribute the relevant {CertifiedColl}s to your users by creating a requirements file or a synclist. We recommend using a requirements file to install collections to your {HubName}, as synclists can only be managed by users with platform administrator privileges. 
+// You can create and certify collections that contain only roles.
+// Current testing requirements are focused on collections containing modules, and additional resources are currently in progress for testing collections containing only roles.
+// Contact ansiblepartners@redhat.com for more information.
+
+You can use {HubNameMain} to distribute the relevant {CertifiedColl}s to your users by creating a requirements file or a synclist. Use a requirements file to install collections to your {HubName}, as synclists can only be managed by users with platform administrator privileges. 
 
 Before you can use a requirements file to install content, you must: 
 
