--- a/downstream/modules/platform/con-gw-create-authentication.adoc
+++ b/downstream/modules/platform/con-gw-create-authentication.adoc
@@ -6,16 +6,16 @@
 
 The *Create Authentication* wizard guides you through the steps to create a new authentication method for your organization. The wizard is launched during the create authentication process.
 
-There are 5 procedures involved in creating an authenticator, including:
+Creating an authenticator involves the following procedures:
 
-. xref:gw-select-auth-type[Authentication type], where you will select the type of authenticator plugin you want to configure.
-. xref:gw-configure-auth-details[Authentication details], where you will configure the authentication details for the plugin you selected.
-. xref:gw-define-rules-triggers[Mapping], where you will define mapping rule types and triggers to control access to the system.
+. xref:gw-select-auth-type[Authentication type], where you select the type of authenticator plugin you want to configure.
+. xref:gw-configure-auth-details[Authentication details], where you configure the authentication details for the plugin you selected.
+. xref:gw-define-rules-triggers[Mapping], where you define mapping rule types and triggers to control access to the system.
 . xref:gw-adjust-mapping-order[Mapping order], where you can define the mapping precedence.
 +
 [NOTE]
 ====
-Mapping order is only available if there are one or more authenticator maps defined.
+Mapping order is only available if you have defined one or more authenticator maps.
 ====
 +
 . xref:gw-review-auth-settings[Review], where you can review and confirm the authentication settings before creating the authentication method.
