--- a/downstream/modules/platform/proc-gw-adjust-mapping-order.adoc
+++ b/downstream/modules/platform/proc-gw-adjust-mapping-order.adoc
@@ -6,7 +6,7 @@
 
 If you have one or more authenticator maps defined, you can manage the order of the maps. Authenticator maps are run in order when logging in lowest order to highest. If one authenticator map determines a user should be a member of a team but a subsequent map determines the user should not be a member of the same team the ruling form the second map will take precedence over the result of the first map. Authenticator maps with the same order are executed in an undefined order.
 
-For example, if the first authenticator map is of type `is_superuser` and the trigger is set to never, any user logging into the system would never be granted the `is_superuser` flag. 
+For example, if the first authenticator map is of type `is_superuser` and the trigger is set to *never*, any user logging into the system would never be granted the `is_superuser` flag. 
 
 And, if the second map is of type `is_superuser` and the trigger is based on the user having a specific group, any user logging in would initially be denied the `is_superuser` permission. However, any user with the specified group would subsequently be granted the `is_superuser` permission by the second rule. 
 
