--- a/downstream/modules/platform/proc-gw-configure-auth-details.adoc
+++ b/downstream/modules/platform/proc-gw-configure-auth-details.adoc
@@ -24,17 +24,17 @@ Changing the name does not update the unique identifier of the authenticator. Fo
 Values defined in this field override the dedicated fields provided in the UI. For example, if you enter a URL in a dedicated field on this page and then add a URL entry into the Additional Authentication Fields, the URL defined in Additional Authentication Fields overrides the definition in the dedicated field.
 ====
 +
+. Enable or disable *Enabled* to specify if the authenticator should be enabled or disabled. If enabled, users are able to login from the authenticator. If disabled, users will not be allowed to login from the authenticator.
 . Enable or disable *Create Object* to specify whether the authenticator should create teams and organizations in the system when a user logs in.
 +
 Enabled:: Teams and organizations defined in the authenticator maps are created and the users added to them.
 Disabled:: Organizations and teams defined in the authenticator maps will not be created automatically in the system. However, if they already exist (i.e. created by a superuser), users who trigger the maps are granted access to them.
 +
-. Enable or disable *Enabled* to specify if the authenticator should be enabled or disabled. If enabled, users are able to login from the authenticator. If disabled, users will not be allowed to login from the authenticator.
-. Enable or disable *Remove Users* if enabled any access previously granted to a user is removed when they authenticate from this source. If disabled, permissions are only added or removed from the user based on the results of this authenticator's authenticator mappings.
+. Enable or disable *Remove Users*. If enabled, any access previously granted to a user is removed when they authenticate from this source. If disabled, permissions are only added or removed from the user based on the results of this authenticator's authenticator mappings.
 +
 For example, assume a user has been granted the `is_superuser` permission in the system. And that user will log into an authenticator whose maps will not formulate an opinion as to whether or not the user should be a superuser.
 If *Remove Users* is enabled, the `is_superuser` permission will be removed from the user, the authenticator maps will not have an opinion as to whether it should be there or not so, after login the user will not have the `is_superuser` permission.
 +
-If *Remove Users* is disabled, the `is_superuser` permission will not be removed from the user, the authenticator maps will not have an opinion as to whether it should be there or not so after login the user will have the `is_superuser` permission.
+If *Remove Users* is disabled, the `is_superuser` permission _will not_ be removed from the user, the authenticator maps will not have an opinion as to whether it should be there or not so after login the user _will_ have the `is_superuser` permission.
 +
-. Click btn:[Next] to xref:gw-define-rules-triggers[Define authenticator mappings].
+. Click btn:[Next] to xref:gw-define-rules-triggers[Define authentication mapping rules and triggers].
