--- a/downstream/modules/platform/proc-gw-configure-auth-details.adoc
+++ b/downstream/modules/platform/proc-gw-configure-auth-details.adoc
@@ -35,6 +35,6 @@ Disabled:: Organizations and teams defined in the authenticator maps will not be
 For example, assume a user has been granted the `is_superuser` permission in the system. And that user will log into an authenticator whose maps will not formulate an opinion as to whether or not the user should be a superuser.
 If *Remove Users* is enabled, the `is_superuser` permission will be removed from the user, the authenticator maps will not have an opinion as to whether it should be there or not so, after login the user will not have the `is_superuser` permission.
 +
-If *Remove Users* is disabled, the `is_superuser` permission _will not_ be removed from the user, the authenticator maps will not have an opinion as to whether it should be there or not so after login the user _will_ have the `is_superuser` permission.
+If *Remove Users* is disabled, the `is_superuser` permission _will not_ be removed from the user. The authenticator maps will not have an opinion as to whether it should be there or not so after login the user _will_ have the `is_superuser` permission.
 +
 . Click btn:[Next] to xref:gw-define-rules-triggers[Define authentication mapping rules and triggers].
